[package]
name = "rust-axum"
version = "0.1.0"
authors = ["AlcorBBX <lev.matisov55@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"


# Axum
axum = "0.6"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
